force-app/main/default/objects/RealEstateChangeHistory_Setting__mdt/RealEstateChangeHistory_Setting__mdt.object-meta.xml
<CustomObject>
    <label>物件変更履歴（データ修正）</label>
</CustomObject>