force-app/main/default/objects/RealEstateChangeHistory_Setting__mdt/fields/APIName__c.field-meta.xml
<CustomField>
    <fullName>APIName__c</fullName>
    <label>API名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>