force-app/main/default/objects/RealEstateChangeHistory_Setting__mdt/fields/FieldVlaue__c.field-meta.xml
<CustomField>
    <fullName>FieldVlaue__c</fullName>
    <label>項目値</label>
    <length>255</length>
    <type>Text</type>
</CustomField>