force-app/main/default/objects/RealEstateChangeHistory_Setting__mdt/fields/ReferenceRecordId__c.field-meta.xml
<CustomField>
    <fullName>ReferenceRecordId__c</fullName>
    <label>参照型レコードID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>